--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue">#1f79e0</color>
     <color name="green">#1DD610</color>
     <color name="red">#D61010</color>
+    <color name="yellow">#AC920D</color>
 </resources>
