--- a/app/src/main/res/layout/administrateur_liste_chauffeurs_inscrits.xml
+++ b/app/src/main/res/layout/administrateur_liste_chauffeurs_inscrits.xml
@@ -21,6 +21,12 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/listeChauffeursInscrits"/>
 
+    <ProgressBar
+            android:id="@+id/progressBarChauffeursInscrits"
+            android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+            android:indeterminateTint="@color/yellow"
+            android:layout_centerInParent="true"/>
 
 
 </RelativeLayout>
