--- a/app/src/main/res/layout/client_page_reservation.xml
+++ b/app/src/main/res/layout/client_page_reservation.xml
@@ -12,9 +12,19 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/titrePageReservationClient"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="50dp"/>
 
     <EditText
+            android:id="@+id/choisirSecteur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Département de départ"
+            android:ems="10"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/pageReservationTitre"/>
+
+   <!-- <EditText
         android:id="@+id/choisirDateDepart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,33 +32,31 @@
         android:inputType="datetime"
         android:ems="10"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:layout_below="@id/pageReservationTitre"/>
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/choisirSecteur"/>-->
 
     <EditText
         android:id="@+id/entrerLieuDepart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
         android:text=""
         android:hint="Lieu de départ"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/choisirDateDepart"/>
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/datePicker"/>
 
     <EditText
         android:id="@+id/entrerDestination"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Destination"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/entrerLieuDepart"/>
 
-
+<!--
     <EditText
         android:id="@+id/choisirHeureArrivee"
         android:layout_width="wrap_content"
@@ -58,7 +66,7 @@
         android:hint="Heure d'arrivee"
         android:layout_below="@id/entrerDestination"
         android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"/>-->
 
 
     <Button
@@ -84,5 +92,20 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="50dp"
         android:layout_marginRight="50dp"/>
+
+    <DatePicker android:layout_width="248dp"
+                android:id="@+id/datePicker"
+                android:layout_height="100dp"
+                android:datePickerMode="spinner"
+                android:calendarViewShown="false"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/choisirSecteur"/>
+    <TimePicker
+            android:id="@+id/timePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:timePickerMode="spinner"
+            android:layout_below="@id/entrerDestination"
+            android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
