--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#1f79e0</color>
+    <color name="green">#1DD610</color>
+    <color name="red">#D61010</color>
+    <color name="yellow">#AC920D</color>
 </resources>
